<resources>
    <string name="app_name">DashScript</string>
    <string name="add_button">Add widget</string>
    <string name="delete_button">Delete widget</string>
    <string name="settings_button">Settings</string>
    <string name="move_button">Move widgets</string>
    <string name="theme_settings">Change theme</string>
    <string name="font_settings">Change font</string>
    <string name="font_size_settings">Change font size</string>
    <string name="apply_settings">Apply</string>
    <string name="weather_widget_location_setting">Change location</string>
    <string name="weather_widget_cf_setting">C° or F°</string>
    <string name="confirmButtonKey">ConfirmButton</string>
    <string name="confirm">Confirm</string>
    <string name="confirmWidgetSubtext">Update widget settings</string>
    <string name="movement_enabled">Widget movement enabled</string>
    <string name="movement_disabled">Widget movement disabled</string>
    <string name="theme_subtext">Change app theme</string>
    <string name="font_subtext">Change app font</string>
    <string name="apply_app_settings">Apply app settings</string>
    <string name="custom_widget_url">Custom widget URL</string>
    <string name="confirm_url">Confirm URL</string>
    <string name="widget_app_theme">Base App Themes</string>
    <string name="widget_theme_summary">Change widget theme to a base app theme</string>
    <string name="widget_app_font">Base App Fonts</string>
    <string name="widget_font_summary">Change widget font to a base app font</string>
    <string name="weather_widget">Temperature</string>
    <string name="time_widget">Time</string>
    <string name="reddit_widget">Reddit</string>
    <string name="stocks_widget">Stocks</string>

</resources>